cupt (1.4.0~) UNRELEASED; urgency=low

  * Cupt:
    - System:
      - Worker:
        - 'get_unpacked_sizes_preview': fixed a crash when purging the package
          in 'config-files' state but which has installation candidates.
          Thanks to Cyril Brulebois. (Closes: #559340)
    - Config:
      - [API break] 'set_regular_var': renamed to 'set_scalar'.
      - [API break] 'set_list_var': renamed to 'set_list'.
      - [API break] 'var': replaced by new methods 'get_string', 'get_number'
        and 'get_bool'.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 03 Dec 2009 21:49:41 +0200

cupt (1.3.1) unstable; urgency=low

  * Cupt:
    - Config:
      - Added the option 'APT::Never-MarkAuto-Sections'.
      - Added the option family 'Aptitude::*'.
    - Cache:
      - 'verify_hash_sums': fixed the crash regression since 1.3.0. Thanks to
        Cyril Brulebois. (Closes: #557177)
    - Graph/TransitiveClosure:
      - Fixed calculating vertexes reachability for paths with length more
        than 2.
    - Worker:
      - While splitting heterogeneous actions, pay the first attention to
        action dependencies which are originated from 'Conflicts'. No longer
        pass '--force-conflicts' to dpkg. Thanks to James Vega.
        (Closes: #556650)
      - Mark the 'remove' subactions of upgrade/downgrade actions as fake.
      - Subsequently, don't try to "eat" some action dependencies anymore.
      - Don't merge unpack and configure subactions.
      - While splitting heterogeneous actions, ignore (after setting up
        '--force-breaks' and '--force-depends') reverse dependencies'
        breakages.
      - Allow circular dependencies between only 'configure' subactions, give
        up with an error on other ones.
      - Pass '--force-bad-path' to work around dpkg bug #558151.
    - Download:
      - Progresses/Console:
        - Fixed a divide-by-zero crash with zero-sized files. Thanks to
          James Vega. (Closes: #557661)
