@@ -6,6 +6,11 @@ cupt (1.4.0~) UNRELEASED; urgency=low
         - 'get_unpacked_sizes_preview': fixed a crash when purging the package
           in 'config-files' state but which has installation candidates.
           Thanks to Cyril Brulebois. (Closes: #559340)
+      - Resolvers/Native:
+        - Fixed the bug when soft dependencies were automatically removed in
+          the start of resolving because of disappear of the parent packages
+          and then weren't considered to keeping when other parent packages
+          hierarchy declared a soft dependency on the package.
     - Config:
       - [API break] 'set_regular_var': renamed to 'set_scalar'.
       - [API break] 'set_list_var': renamed to 'set_list'.
